24Nov99=======================================================================
1. extended badmsg.pl stuff so that it works like the forward file and allows
one to reject on to, from, origin and subject fields.
2. added a swop.pl again in a forward.pl like format that allows simple swop
for a field or test on a field and set another.
3. Fixed the problem that read private mail follows you around as well as
unread private mail does.
4. Change the logic of connections so that the node will accept callsigns with
SSIDs to -8 as different entities from each other. SSIDs > 8 are subtracted 
from 15 and are assumed to be coming in via netrom diddled connections. This
affects lots of the commands as well. I may not have got them all.
5. Hangup clients on HUP signals. I originally ignored them, for reasons that
are now lost in the mists of time. HUP signals now cause clients to die 
(cleanly) and disconnect everything correctly.
6. Added show/time command
21Nov99=======================================================================
1. lose extraneous rubbish after the callsign as sent by BBSes.
2. Change end label on sh/moon to RGain dB rather than Loss dB.
3. Remove spurious call to DXCluster->get_exact in pc50.
4. Allow rcmd to locally connected nodes that are not (for some reason) in the
nodes table.
5. Try and send a PC39 in more cases to a cluster that I want to disconnect
from in the hope that it notices and disconnects its end.
20Nov99=======================================================================
1. Added set/unset logininfo which will tell anybody that has this set when
someone has either logged in or out of this node.
2. Added set/pinginterval command which alters the length of time between
pings sent to nodes, the value is minutes < 120 and seconds above that, 0
means disable pinging (not recommended).
3. If someone does a sysop whilst connected via ax25, don't show privilege
level or passwd in stat/user.