@@ -24,7 +24,7 @@ foreach $call (@args) {
 	$call = uc $call;
 	my $dxchan = DXChannel->get($call);
 	$user = $dxchan->user if $dxchan;
-	$user = DXUser->get_exact($call) unless $user;
+	$user = DXUser->get($call) unless $user;
 	if ($user) {
 		unless ($user->sort eq 'A' || $user->sort eq 'S') {
 			push @out, $self->msg('e13', $call);
